Update tools